--- a/web/src/sass/large.scss
+++ b/web/src/sass/large.scss
@@ -226,11 +226,18 @@ button {
     text-align: right;
 }
 
+.graph-container {
+    z-index: 2;
+    background: rgba(255, 255, 255, .8);
+    box-shadow: 0 3px 10px rgba(60, 60, 60, .6);
+}
+
 // lists
 .list-insert {
     .list-head {
         top: $top_nav;
         border-bottom: 1px solid #999;
+        width: 100%;
         height: 24px;
         background: white;
     }
@@ -510,6 +517,9 @@ button {
             width: 62px;
             text-align: right;
         }
+    }
+    .graph-fund-history {
+        position: relative;
     }
     .graph-stocks {
         position: static;
