--- a/web/src/sass/tablet.scss
+++ b/web/src/sass/tablet.scss
@@ -63,7 +63,6 @@ body {
         }
     }
     .graph-fund-history {
-        float: right;
         position: relative;
         canvas {
             position: absolute;
@@ -86,14 +85,6 @@ body {
 }
 
 .graph-container-outer {
-    width: inherit;
-    height: 299px;
-    position: fixed;
-    top: $top_nav;
-    z-index: 5;
-    box-shadow: 0 3px 16px rgba(60, 60, 60, .3);
-    background: white;
-    transition: height .3s ease-in-out;
 }
 .graph-container-inner {
     width: 100%;
@@ -120,21 +111,6 @@ body {
     }
     &:active {
         bottom: -25px;
-    }
-}
-.list-insert {
-    .list-head {
-        width: 1000px;
-        left: 50%;
-        margin-left: -500px;
-        top: $height_nav + 299;
-        padding-top: $top_nav - $height_nav;
-        transition: top .3s ease-in-out;
-    }
-    .list-ul {
-        padding-top: 324px;
-        width: inherit;
-        transition: padding-top .3s ease-in-out;
     }
 }
 .graph-hidden {
